core/framework/test/suite/dsls/xvm/page/01.base/error/part2.ux
<!--
    Copyright (c) 2023, the hapjs-platform Project Contributors
    SPDX-License-Identifier: Apache-2.0
-->

<template>
  <div>
    <text>$emit</text>
  </div>
</template>

<script>
  export default {
    onReady() {
      this.$emit('testEmit')
    }
  }
</script>